syntax = "proto3";
package eventpb;
option go_package = "github.com/pingcap/ticdc/eventpb";

import "heartbeatpb/heartbeat.proto";

message EventFilterRule {
    repeated string matcher = 1;
    repeated string ignore_event = 2;
    repeated string ignore_sql = 3;
    string ignore_insert_value_expr = 4;
    string ignore_update_new_value_expr = 5;
    string ignore_update_old_value_expr = 6;
    string ignore_delete_value_expr = 7;
}

message InnerFilterConfig {
    repeated string rules = 1;
    repeated uint64 ignore_txn_start_ts = 2;
    repeated EventFilterRule EventFilters = 3;
}

message FilterConfig {
    bool caseSensitive = 1;
	bool forceReplicate = 2;
    InnerFilterConfig filterConfig = 3;
}


message ResolvedTs {

}

enum OpType {
	OpTypePut = 0;
	OpTypeDelete = 1;
}

message Event {
    bytes key = 1;
	// nil for delete type
	bytes value = 2;
	// nil for insert type
	bytes OldValue = 3;
    OpType op_type = 4;

}

message TxnEvent {
    repeated Event events = 1;
    uint64 commit_ts = 2; // 跟上述 event 同时出现 -- 就是标记目前达成的 resolvedTs
    uint64 start_ts = 3; // 事务开始时间戳
}

message TableInfo {

}

message EventFeed {
    repeated TxnEvent txn_events = 1; // 包含多个 txn events
    uint64 resolved_ts = 2; // 跟上述 event 同时出现 -- 就是标记目前达成的 resolvedTs
    heartbeatpb.DispatcherID dispatcher_id = 3; // 表示这个 event 是 对应哪个 dispatcher 的
    float ratio = 4; // 表示这个 event 应该被发送到哪个 dispatcher 的 ratio
    TableInfo table_info = 5; // 包含 table 相关信息，包括表名，主键，列名等
}

message IntegrityConfig {
	string IntegrityCheckLevel  = 1;
	string CorruptionHandleLevel  = 2;
}

message DispatcherAddRequest {
    // cluster_id is the id of the TiDB cluster that the dispatcher belongs to.
    uint64 cluster_id = 1;
    heartbeatpb.ChangefeedID changefeed_id = 2;
    heartbeatpb.DispatcherID dispatcher_id = 3;
    heartbeatpb.TableSpan table_span = 4;
    uint64 start_ts = 5;
    FilterConfig filter_config = 6;
    bool enable_sync_point = 7;
    uint64 sync_point_ts = 8;
    uint64 sync_point_interval = 9;
    bool only_reuse = 10;
    bool bdr_mode = 11;
    IntegrityConfig integrity = 12;
	string timezone = 13;
}

message DispatcherResetRequest {
    // cluster_id is the id of the TiDB cluster that the dispatcher belongs to.
    uint64 cluster_id = 1;
    heartbeatpb.ChangefeedID changefeed_id = 2;
    heartbeatpb.DispatcherID dispatcher_id = 3;
    uint64 start_ts = 4;
    uint64 epoch = 5;
    FilterConfig filter_config = 6;
    bool enable_sync_point = 7;
    uint64 sync_point_ts = 8;
    uint64 sync_point_interval = 9;
}

message DispatcherRemoveRequest {
    // cluster_id is the id of the TiDB cluster that the dispatcher belongs to.
    uint64 cluster_id = 1;
    heartbeatpb.ChangefeedID changefeed_id = 2;
    heartbeatpb.DispatcherID dispatcher_id = 3;
}

message DispatcherPauseRequest {
     // cluster_id is the id of the TiDB cluster that the dispatcher belongs to.
    uint64 cluster_id = 1;
    heartbeatpb.ChangefeedID changefeed_id = 2;
    heartbeatpb.DispatcherID dispatcher_id = 3;
}

message DispatcherResumeRequest {
     // cluster_id is the id of the TiDB cluster that the dispatcher belongs to.
    uint64 cluster_id = 1;
    heartbeatpb.ChangefeedID changefeed_id = 2;
    heartbeatpb.DispatcherID dispatcher_id = 3;
}
